@@ -5,7 +5,6 @@ import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.FinremCaseData;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -16,6 +15,6 @@ public class CreateCaseMandatoryDataValidator {
     public List<String> validate(FinremCaseData caseData) {
         return mandatoryDataValidators.stream()
             .flatMap(v -> v.validate(caseData).stream())
-            .collect(Collectors.toList());
+            .toList();
     }
 }
